hphp/test/zend/good/Zend/tests/errmsg_030.php.expectf

Fatal error: A type specifier is expected here. in %s/errmsg_030.php on line 3
